<resources>
    <string name="app_name">Pomodoro</string>
    <string name="time_seperator">:</string>
    <string name="title_home">Target</string>
    <string name="title_notifications">Activity</string>
    <string name="title_countdown">Timer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="action_create_data">CreateData</string>
    <string name="action_delete_data">DeleteAllData</string>
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>
    <string name="add_alarm">New Timer</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="lap">Time</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="item_removable">Drag  and Remove</string>
    <string name="icon_msg">Icon</string>
    <string name="quit_dialog_title">Are you sure to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>
    <string name="timeup_dialog_title">Timer</string>
    <string name="timeup_dialog_message">"Time is up ! "</string>
    <string name="dialog_quit">Quit</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="rules_text" translatable="false">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="share">Share</string>


</resources>