<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pomodoro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"/>
<!--        app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" -->
        <!-- 添加动画效果，问题是自定义的动画效果太Low-->

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pomodoro.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <argument
            android:name="project"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="默认工作" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_countdown"
            app:destination="@id/navigation_countdown" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pomodoro.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_countdown"
        android:name="com.example.pomodoro.ui.notifications.CountDownFragment"
        android:label="@string/title_countdown"
        tools:layout="@layout/fragment_countdown" >
        <argument
            android:name="allTime"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

</navigation>