<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <TextView
        android:id="@+id/lbHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/hour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbMinute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/minute"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:text="@string/second"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--定时器-->
    <EditText
        android:id="@+id/etHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/notification_clock_text_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/splitter1"
        app:layout_constraintTop_toBottomOf="@id/lbHour" />

    <TextView
        android:id="@+id/splitter1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_seperator"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/notification_clock_text_size"
        app:layout_constraintBottom_toBottomOf="@id/etHour"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/etHour"
        app:layout_constraintRight_toLeftOf="@id/etMin"
        app:layout_constraintTop_toTopOf="@id/etHour" />

    <EditText
        android:id="@+id/etMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/notification_clock_text_size"
        app:layout_constraintBottom_toBottomOf="@id/etHour"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/splitter1"
        app:layout_constraintRight_toLeftOf="@id/splitter2" />

    <TextView
        android:id="@+id/splitter2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_seperator"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/notification_clock_text_size"
        app:layout_constraintBottom_toBottomOf="@id/etHour"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/etMin"
        app:layout_constraintRight_toLeftOf="@id/etSec"
        app:layout_constraintTop_toTopOf="@id/etHour" />

    <EditText
        android:id="@+id/etSec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="37dp"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/notification_clock_text_size"
        app:layout_constraintBottom_toBottomOf="@id/etHour"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/splitter2"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomNavView_height_margin"
        android:text="@string/start"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnPause" />


    <Button
        android:id="@+id/btnPause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomNavView_height_margin"
        android:text="@string/pause"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/btnStart"
        app:layout_constraintRight_toLeftOf="@id/btnResume" />

    <Button
        android:id="@+id/btnResume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomNavView_height_margin"
        android:text="@string/resume"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/btnPause"
        app:layout_constraintRight_toLeftOf="@id/btnReset" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottomNavView_height_margin"
        android:text="@string/reset"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/btnResume"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="342dp" />
</androidx.constraintlayout.widget.ConstraintLayout>